# rdk-x5-orbbec-airobot-vision

./: .gitignore  README.md  log_camera_to_base.txt  log_duck_detector.txt  log_grasp_task.txt  start_airbot_can0.sh  start_airbot_can1.sh  start_auto_grasp.sh
Orbbec_ws/: README.md
Orbbec_ws/src/detect_yolo/: CMakeLists.txt  package.xml
Orbbec_ws/src/detect_yolo/config/: yolov11workconfig.json
Orbbec_ws/src/detect_yolo/src/: detect_yolo_node.cpp
Orbbec_ws/src/detector/: CMakeLists.txt
Orbbec_ws/src/detector/src/: apple_detector_node.cpp  red_circle_detector_node.cpp
Orbbec_ws/src/emotion/: collect_emotion_dataset.py  emotion_labels.txt  emotion_mobilenetv3_small_mid_featuremap_quant_info.json  emotion_node.py  gemini2_emotion_test.py  gemini2_emotion_test_torch_old.py  landmark_roi_test  landmark_roi_test.cpp
Orbbec_ws/src/emotion_landmark_cpp/: CMakeLists.txt  package.xml
Orbbec_ws/src/emotion_landmark_cpp/src/: emotion_landmark_cpp_node_backup_20260515_011601.cpp  emotion_landmark_cpp_node_backup_before_lowmood_20260521_164757.cpp
Orbbec_ws/src/emotion_local/: package.xml  setup.py
Orbbec_ws/src/emotion_local/emotion_local/: emotion_fusion_node.py  emotion_node.py
deploy/systemd/: airbot-server.service  service-robot-grasp.service
docs/: auto_start_bringup.md  chassis_integration_test.md  chassis_interaction_protocol.md  grasp_startup_commands.md  service_robot_interface.md
hand_to_eye/: README.md  arm_task_manager.py  camera_to_base_transform.py  chassis_approach_publisher.py  vision_voice_bridge.py  visual_target_bridge.py
robot_ws/: README.md
robot_ws/src/robot_arm_driver/: setup.py
robot_ws/src/robot_arm_driver/robot_arm_driver/: arm_executor_node.py  pose_switch_node.py
robot_ws/src/robot_arm_interface/robot_arm_interface/: airbot_wrapper.py
robot_ws/src/robot_bringup/config/: arm_executor.yaml  open_loop_grasp.yaml  open_loop_grasp.yaml.bak_20260513_231209  open_loop_grasp.yaml.bak_fix_yaml_20260513_231554  open_loop_grasp.yaml.bak_fix_yaml_20260514_011056  open_loop_grasp.yaml.bak_front_x_20260514_011819
robot_ws/src/robot_bringup/launch/: arm_bringup.launch.py  camera_target_demo.launch.py  open_loop_grasp.launch.py  service_robot_grasp_bringup.launch.py
robot_ws/src/robot_msgs/: CMakeLists.txt  package.xml
robot_ws/src/robot_msgs/msg/: ArmCommand.msg  ArmState.msg
robot_ws/src/robot_tasks/: package.xml
robot_ws/src/robot_tasks/robot_tasks/: camera_target_executor.py  grasp_task_open_loop.py
robot_ws/src/robot_tasks/robot_tasks/grasp/: command_port.py  config.py  diagnostics.py  planning_result.py  state_names.py  target_manager.py
robot_ws/src/robot_tasks/robot_tasks/shared/: grasp_planner.py
robot_ws/src/robot_tasks/tools/: check_open_loop_runtime_surface.py
robot_ws/test_scripts/: fake_visual_target_test.py
