<?xml version="1.0"?>
<package format="3">
  <name>detect_yolo</name>
  <version>0.1.0</version>
  <description>COCO 80-class object detector using BPU YOLO11m on RDK X5</description>
  <maintainer email="xjt@example.com">xjt</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ai_msgs</depend>
  <depend>dnn_node</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
