<?xml version="1.0"?>
<package format="3">
  <name>emotion_local</name>
  <version>0.1.0</version>
  <description>5-class face emotion recognition with custom ResNet18 model on RDK X5 BPU</description>
  <maintainer email="xjt@example.com">xjt</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
